--- a/front/public/index.html
+++ b/front/public/index.html
@@ -31,7 +31,7 @@
     -->
     <title>pro-crudder</title>
   </head>
-  <body style="background-color: #292929">
+  <body style="background-color: #2D2D2D">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
